<resources>
    <string name="app_name">VibeZ</string>
    <string name="find_a_stranger">Find a Stranger</string>
    <string name="enter_your_details">Enter your details to start chatting.</string>
    <string name="username">Username</string>
    <string name="age">Age (Optional)</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="start_chat">Start Chat</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="type_a_message">Type a message...</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System Default</string>
    <string name="about">About</string>
    <string name="about_app">About VibeZ</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_description">VibeZ is a random online chatting app where you can connect with strangers from around the world. Have fun conversations and make new friends!</string>
    <string name="developed_by">Developed with ❤️</string>
    
    <!-- Validation -->
    <string name="please_fill_username_gender">Please enter a username and select a gender.</string>
    
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>